--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "chai-aur-code",
   "version": "1.0.0",
-  "description": "a backend at chai aur code",
+  "description": "Backend learning series",
+  "type":"module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "javascript, backend",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.3",
-    "prettier": "^3.2.5"
+    "nodemon": "^3.0.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1"
   }
 }
